--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -356,9 +356,6 @@
 				width: 100%;
 				top: 45px;
 				height: 100px;
-				/*display: flex;*/
-				/*justify-content: center;*/
-				/*align-items: center;*/
 			}
 
 			.section-list-audio-border-fill {
@@ -483,7 +480,7 @@
 				}
 			});
 			mui.plusReady(function() {
-				events.closeWaiting();
+				//events.closeWaiting();
 				var wd = events.showWaiting();
 				initData();
 				initControl();
@@ -528,8 +525,10 @@
 
 				audio.oncanplaythrough = function() { //可以播放
 					console.log("audio-oncanplaythrough " + audioState);
-					audioState = 0;
-					audio.play();
+					if(audioState == 4) {
+						audioState = 0;
+						audio.play();
+					}
 				}
 
 				audio.onplaying = function() { //播放
@@ -618,6 +617,7 @@
 					console.log('mui-table-view-cell id ' + this.id + " e " + e.target.getAttribute("data-type"));
 					var self = this;
 					if(events.judgeLoginMode(self)) { //判断是否是游客身份登录
+						document.getElementById("audio").pause();
 						return;
 					}
 					if(sectionData.value[sectionId].SecStatus == 0) { //内容被屏蔽
@@ -685,6 +685,7 @@
 					console.log("comment_section " + sectionId);
 					var self = this;
 					if(events.judgeLoginMode(self)) { //判断是否是游客身份登录
+						document.getElementById("audio").pause();
 						return;
 					}
 					if(!sectionData.value[sectionId]) {
@@ -718,6 +719,7 @@
 				mui('#section_top').on('tap', '.icon-zanzan1', function() {
 					var self = this;
 					if(events.judgeLoginMode(self)) { //判断是否是游客身份登录
+						document.getElementById("audio").pause();
 						return;
 					}
 					sectionLikeOrNot();
@@ -775,6 +777,7 @@
 						document.getElementById("audio").play();
 					} else {
 						mui.toast("音频加载中");
+						document.getElementById("audio").load();
 					}
 				});
 			}
@@ -798,20 +801,6 @@
 						pageIndex = index;
 						if(data.RspData.Data.length != 0) {
 							if(index == 1) {
-//								data.RspData.Data[0] = {
-//									"EncImgAddr": "http://qn-cspb.jiaobaowang.net/jbypc/pc/thumb/9000620170608134134.jpg",
-//									"SecNote": "",·
-//									"Comments": [],
-//									"SecId": 17,
-//									"SecName": "1",
-//									"SecStatus": 1,
-//									"EncAddr": "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1494318853754284.mp3",
-//									"EncType": 2,
-//									"UpTime": "2017-06-08 13:41:50",
-//									"EncLen": 0,
-//									"LikeNum": 0,
-//									"IsLiked": 0
-//								};
 								showTopData(data.RspData.Data[0], wd);
 							}
 							showSectionList(data.RspData.Data);
