微课详情打开硬件加速

--- a/JiaoBaoYun-hb/html/show/show-home1.html
+++ b/JiaoBaoYun-hb/html/show/show-home1.html
@@ -58,7 +58,10 @@
 				<div class="mui-slider-group">
 					<div id="show-all" class="mui-slider-item mui-control-content">
 						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll show-list">
+							<div class="mui-scroll">
+								<div class="show-list">
+									
+								</div>
 							</div>
 						</div>
 					</div>
@@ -273,6 +276,8 @@
 				div.className = "mui-slider-item mui-control-content"
 				div.innerHTML = '<div  class="mui-scroll-wrapper">\
 							<div class="mui-scroll show-list">\
+							  <div class="show-list">\
+							  </div>\
 							</div>\
 						</div>';
 				return div;
