发布展现 不允许发一个空格 展现详情 家长个人空间 开启硬件加速

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -244,7 +244,7 @@
 					msgTitle = '';
 				} else {
 					pubScopes = '[2]';
-					if(!askTitle.value || askTitle.value == '') {
+					if(!askTitle.value || askTitle.value == ''||events.isNull(askTitle.value)) {
 						mui.toast('请输入标题');
 						self.disabled = false;
 						return;
@@ -256,7 +256,7 @@
 					msgTitle = askTitle.value;
 				}
 				var tempText = textView.value;
-				if(!tempText || tempText == '') {
+				if(!tempText || tempText == ''||events.isNull(tempText)) {
 					mui.toast('请输入内容');
 					self.disabled = false;
 					return;
