--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -1049,7 +1049,7 @@
 					document.getElementById("section_comment_list").appendChild(ele);
 				}
 				if(data.length == 0) {
-					document.getElementById("section_comment_list").innerHTML = '<div style="text-align: center;color: #808080;">\
+					document.getElementById("section_comment_list").innerHTML = '<div style="text-align: center;color: #808080;margin: 50px 0px;">\
 						<img src="../../image/qiuzhi/qiuzhi_noanswer.png" style="width: 50%;"/>\
 						<div style="padding-bottom: 10px;">暂无评论~~~</div>\
 					</div>';
