展现界面的硬件加速

--- a/JiaoBaoYun-hb/html/show/show-home1.html
+++ b/JiaoBaoYun-hb/html/show/show-home1.html
@@ -172,7 +172,7 @@
 			 */
 			function initFresh(freshConatiner) {
 				mui(freshConatiner.querySelector('.mui-scroll-wrapper')).scroll({
-					bounce: true,
+					bounce: false,
 					indicators: true, //是否显示滚动条
 					deceleration: deceleration
 				});
